Testing JWT auth

--- a/grpc_client_cli/.vscode/launch.json
+++ b/grpc_client_cli/.vscode/launch.json
@@ -10,8 +10,7 @@
             "type": "dart",
             "program": "bin/grpc_client_cli.dart",
             "args": [
-                "todos",
-                "10"
+                "albums"
             ]
         }
     ]
